package propertynmoney;
import propertynmoney.Player.*;
import propertynmoney.Property.*;


public abstract class Tile {
    Player[] players;
    enum tileType {PROPERTY, CHANCE, COMCHEST, JAIL, GO}
}
