@startuml
'https://plantuml.com/class-diagram

class GameBoard
abstract class Tile
abstract class Player
abstract class Property
class Card
class User
class AutomatedPlayer
class Land
class Utility
class Bank

Player <|-- User
Player <|-- AutomatedPlayer
Player .. Property
Bank .. Player
Property <|-- Land
Property <|-- Utility

GameBoard .. Tile
GameBoard .. Card
Tile <|-- Property

class GameBoard{
-Tile[40] tiles
-Card[] chance
-Card[] commuintyChest
}

abstract class Tile{
-Player[] playersOnTile
-enum tileType
}
class Card{
-String title
-String text
-String type
#getType()
}
abstract class Player {
#int[] properties
#int gameLocationIndex
#ImageIcon token
#int money
#String name
+buy()
+sell()
+trade()
}

abstract class Property {
#String name
#int value
#bool purchased
-purchase()
-mortgage()
}

class User {
}

class AutomatedPlayer {
#automateTurn()
}

class Land{
-upgrade()
}

class Utility{
}

class Bank{
-Player[] players
#sellProperty()
#auction()
}
@enduml